tests/errors/futurebraces.pyx
from __future__ import braces

_ERRORS = u"""
1:23: not a chance
"""
